[package]
name = "gmsol-programs"
version = "0.4.0"
edition = "2021"
license = "SEE LICENSE IN https://github.com/gmsol-labs/gmx-solana/blob/main/LICENSE"
description = "GMX-Solana is an extension of GMX on the Solana blockchain."
repository = "https://github.com/gmsol-labs/gmx-solana-programs"
readme = "README.md"
keywords = ["gmx-solana", "gmx", "solana"]

[dependencies]
anchor-lang = "0.30.1"
bytemuck = { version = "1.19.0", features = ["min_const_generics"] }
